--- a/index.html
+++ b/index.html
@@ -6,18 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        html {
+            background: #000;
+            user-select: none;
+        }
+
         body {
             font-family: Arial, sans-serif;
             margin: 0;
-            background: linear-gradient(to bottom, #0d0670, #090447, #06050f);
+            background: linear-gradient(to bottom, #0d0670, #080538, #06050f);
 
         }
-header{
-    background: #0d0670;
-    margin: 0;
-    padding: 0;
-    line-height: 75px;
-}
+
+        header {
+            background: #0d0670;
+            margin: 0;
+            padding: 0;
+            line-height: 75px;
+        }
+
         main {
             color: #333;
             margin: 0;
@@ -41,14 +48,14 @@ header{
             width: 100%;
             height: 8vh;
             background: linear-gradient(to right, transparent 0%, #2a35ce 50%, transparent 100%);
-            margin-bottom: 250px;
+            margin-bottom: 0px;
 
         }
 
         h1 {
             color: #ffffff;
-           margin: 0;
-           text-align: center;
+            margin: 0;
+            text-align: center;
         }
 
         p {
@@ -63,6 +70,7 @@ header{
             grid-template-columns: repeat(3, 1fr);
             font-size: 24px;
             color: #333;
+            box-shadow: #000 4px 14px 14px;
         }
 
         .box2 {
@@ -75,8 +83,8 @@ header{
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 24px;
-            color: #333;
+            font-size: 44px;
+            color: white;
         }
 
         .myHr {
@@ -125,10 +133,16 @@ header{
             font-size: 24px;
             text-align: center;
         }
+
         button {
             width: 25vw;
             height: 4vh;
             border-radius: 8px;
+        }
+
+        .scale:active {
+            transform: scale(0.88);
+            background-color: rgb(243, 211, 151);
         }
     </style>
 </head>
@@ -146,19 +160,29 @@ header{
         </section>
         <section class="section2">
             <div class="box3">
-                <input type="name" placeholder="Your name" id="name">
+                <input type="name" placeholder="Your name" id="name1">
+                <span>
+                </span>
             </div>
             <div class="box3">
-                <input type="name" placeholder="Your name" id="name">
+                <input type="name" placeholder="Your name" id="name2">
             </div>
         </section>
     </main>
     <footer>
-        <button id="new">New Home</button>
-        <button id="old">Old Home</button>
-        <button id="old">Old TicTacToe</button>
+        <button onclick="GotoMainHome()" class="scale">Main Home</button>
+        <button id="old" class="scale">Old Home</button>
+        <button id="old" class="scale">Old TicTacToe</button>
     </footer>
+
+
     <script>
+
+        function GotoMainHome() {
+            window.location.href = "https://timetocode2.github.io/B";
+        };
+        let a = "a";
+        let b = "";
         const box1 = document.getElementById('box1');
 
         for (let i = 1; i <= 9; i++) {
@@ -167,6 +191,115 @@ header{
             box2.id = 'box2' + i;
             box1.appendChild(box2);
         };
+
+        for (let i = 1; i <= 9; i++) {
+
+            const move = document.getElementById('box2' + i);
+
+            if (move) {
+                move.addEventListener('click', () => {
+                    // let User1 = document.getElementById('name1').value.charAt(0).toUpperCase() + document.getElementById('name1').value.charAt(1).toLowerCase();
+                    // let User2 = document.getElementById('name2').value.charAt(0).toUpperCase() + document.getElementById('name2').value.charAt(1).toLowerCase();
+
+                    if (a == "a") {
+                        move.innerHTML = "❤️";
+                        move.style.pointerEvents = 'none';
+                        a = "b";
+                    } else if (a == "b") {
+                        move.innerHTML = "😎";
+                        move.style.pointerEvents = 'none';
+                        a = "a";
+                    };
+
+
+
+
+                    let mymove1 = document.getElementById('box2' + 1);
+                    let mymove2 = document.getElementById('box2' + 2);
+                    let mymove3 = document.getElementById('box2' + 3);
+                    let mymove4 = document.getElementById('box2' + 4);
+                    let mymove5 = document.getElementById('box2' + 5);
+                    let mymove6 = document.getElementById('box2' + 6);
+                    let mymove7 = document.getElementById('box2' + 7);
+                    let mymove8 = document.getElementById('box2' + 8);
+                    let mymove9 = document.getElementById('box2' + 9);
+
+
+
+
+                    if (mymove1 && mymove2 && mymove3) {
+                        if (mymove1.innerHTML == mymove2.innerHTML && mymove2.innerHTML == mymove3.innerHTML && mymove1.innerHTML !== "") {
+                            mymove1.style.backgroundColor = "green";
+                            mymove2.style.backgroundColor = "green";
+                            mymove3.style.backgroundColor = "green";
+                            a = "c";
+                        };
+                    };
+
+                    if (mymove4 && mymove5 && mymove6) {
+                        if (mymove4.innerHTML == mymove5.innerHTML && mymove5.innerHTML == mymove6.innerHTML && mymove4.innerHTML !== "") {
+                            mymove4.style.backgroundColor = "green";
+                            mymove5.style.backgroundColor = "green";
+                            mymove6.style.backgroundColor = "green";
+                            a = "c";
+                        };
+                    };
+
+                    if (mymove7 && mymove8 && mymove9) {
+                        if (mymove7.innerHTML == mymove8.innerHTML && mymove8.innerHTML == mymove9.innerHTML && mymove7.innerHTML  !== "") {
+                            mymove7.style.backgroundColor = "green";
+                            mymove8.style.backgroundColor = "green";
+                            mymove9.style.backgroundColor = "green";
+                            a = "c";
+                        };
+                    };
+
+                    if (mymove1 && mymove4 && mymove7) {
+                        if (mymove1.innerHTML == mymove4.innerHTML && mymove4.innerHTML == mymove7.innerHTML && mymove1.innerHTML !== "") {
+                            mymove1.style.backgroundColor = "green";
+                            mymove4.style.backgroundColor = "green";
+                            mymove7.style.backgroundColor = "green";
+                            a = "c";
+                        };
+                    };
+
+                    if (mymove2 && mymove5 && mymove8) {
+                        if (mymove2.innerHTML == mymove5.innerHTML && mymove5.innerHTML == mymove8.innerHTML && mymove2.innerHTML !== "") {
+                            mymove2.style.backgroundColor = "green";
+                            mymove5.style.backgroundColor = "green";
+                            mymove8.style.backgroundColor = "green";
+                            a = "c";
+                        };
+                    };
+
+                    if (mymove3 && mymove6 && mymove9) {
+                        if (mymove3.innerHTML == mymove6.innerHTML && mymove6.innerHTML == mymove9.innerHTML && mymove3.innerHTML !== "") {
+                            mymove3.style.backgroundColor = "green";
+                            mymove6.style.backgroundColor = "green";
+                            mymove9.style.backgroundColor = "green";
+                            a = "c";
+                        };
+                    };
+
+                    if (mymove1 && mymove5 && mymove9) {
+                        if (mymove1.innerHTML == mymove5.innerHTML && mymove5.innerHTML == mymove9.innerHTML && mymove1.innerHTML !== "") {
+                            mymove1.style.backgroundColor = "green";
+                            mymove5.style.backgroundColor = "green";
+                            mymove9.style.backgroundColor = "green";
+                            a = "c";
+                        };
+                    };
+
+
+                });
+            };
+
+        };
+
+
+
+
+
 
     </script>
 </body>
