--- a/index.html
+++ b/index.html
@@ -5,146 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        html {
-            background: #000;
-            user-select: none;
-        }
-
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            background: linear-gradient(to bottom, #0d0670, #080538, #06050f);
-
-        }
-
-        header {
-            background: #0d0670;
-            margin: 0;
-            padding: 0;
-            line-height: 75px;
-        }
-
-        main {
-            color: #333;
-            margin: 0;
-            padding: 20px;
-            width: 99vw;
-
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            text-align: center;
-            box-sizing: border-box;
-        }
-
-        /* linear-gradient(to bottom, #0d0670, #090447, #06050f) */
-        footer {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 20px;
-            background: transparent;
-            width: 100%;
-            height: 8vh;
-            background: linear-gradient(to right, transparent 0%, #2a35ce 50%, transparent 100%);
-            margin-bottom: 0px;
-
-        }
-
-        h1 {
-            color: #ffffff;
-            margin: 0;
-            text-align: center;
-        }
-
-        p {
-            color: #666;
-        }
-
-        .box1 {
-            background: #e0e0e0;
-            border-radius: 8px;
-            border: rgb(201, 14, 45) solid 3px;
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            font-size: 24px;
-            color: #333;
-            box-shadow: #000 4px 14px 14px;
-        }
-
-        .box2 {
-            width: 20vw;
-            height: 20vw;
-            background-color: #031891;
-            border-radius: 8px;
-            border: rgb(201, 14, 45) solid 3px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 44px;
-            color: white;
-        }
-
-        .myHr {
-            margin-top: 45px;
-            width: 40%;
-            height: 2px;
-            border: none;
-            background: linear-gradient(to right, transparent 0%, #ffffff 50%, transparent 100%);
-        }
-
-        .section2 {
-            display: flex;
-            align-items: center;
-            gap: 20px;
-            margin-top: 20px;
-            margin-bottom: 5px;
-        }
-
-        .box3 {
-            width: 43vw;
-            height: 30vh;
-            background-color: #031891;
-            border-radius: 8px;
-            border: rgb(201, 14, 45) solid 3px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0);
-            display: flex;
-            justify-content: center;
-            font-size: 24px;
-            color: #ffffff;
-        }
-
-        input {
-            background: #fdfdfdb9;
-            width: 36vw;
-            height: 3vh;
-            border-radius: 8px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            font-size: 24px;
-            margin-top: 3px;
-        }
-
-        input::placeholder {
-            font-size: 24px;
-            text-align: center;
-        }
-
-        button {
-            width: 25vw;
-            height: 4vh;
-            border-radius: 8px;
-        }
-
-        .scale:active {
-            transform: scale(0.88);
-            background-color: rgb(243, 211, 151);
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -157,6 +18,10 @@
         <section>
             <div class="box1" id="box1"></div>
             <hr class="myHr">
+        </section>
+        <section class="controls">
+            <button onclick="reset()" class="scale">Reset</button>
+            <button onclick="computer()" class="scale">Computer</button>
         </section>
         <section class="section2">
             <div class="box3">
@@ -175,133 +40,7 @@
         <button id="old" class="scale">Old TicTacToe</button>
     </footer>
 
-
-    <script>
-
-        function GotoMainHome() {
-            window.location.href = "https://timetocode2.github.io/B";
-        };
-        let a = "a";
-        let b = "";
-        const box1 = document.getElementById('box1');
-
-        for (let i = 1; i <= 9; i++) {
-            const box2 = document.createElement('div');
-            box2.className = 'box2';
-            box2.id = 'box2' + i;
-            box1.appendChild(box2);
-        };
-
-        for (let i = 1; i <= 9; i++) {
-
-            const move = document.getElementById('box2' + i);
-
-            if (move) {
-                move.addEventListener('click', () => {
-                    // let User1 = document.getElementById('name1').value.charAt(0).toUpperCase() + document.getElementById('name1').value.charAt(1).toLowerCase();
-                    // let User2 = document.getElementById('name2').value.charAt(0).toUpperCase() + document.getElementById('name2').value.charAt(1).toLowerCase();
-
-                    if (a == "a") {
-                        move.innerHTML = "❤️";
-                        move.style.pointerEvents = 'none';
-                        a = "b";
-                    } else if (a == "b") {
-                        move.innerHTML = "😎";
-                        move.style.pointerEvents = 'none';
-                        a = "a";
-                    };
-
-
-
-
-                    let mymove1 = document.getElementById('box2' + 1);
-                    let mymove2 = document.getElementById('box2' + 2);
-                    let mymove3 = document.getElementById('box2' + 3);
-                    let mymove4 = document.getElementById('box2' + 4);
-                    let mymove5 = document.getElementById('box2' + 5);
-                    let mymove6 = document.getElementById('box2' + 6);
-                    let mymove7 = document.getElementById('box2' + 7);
-                    let mymove8 = document.getElementById('box2' + 8);
-                    let mymove9 = document.getElementById('box2' + 9);
-
-
-
-
-                    if (mymove1 && mymove2 && mymove3) {
-                        if (mymove1.innerHTML == mymove2.innerHTML && mymove2.innerHTML == mymove3.innerHTML && mymove1.innerHTML !== "") {
-                            mymove1.style.backgroundColor = "green";
-                            mymove2.style.backgroundColor = "green";
-                            mymove3.style.backgroundColor = "green";
-                            a = "c";
-                        };
-                    };
-
-                    if (mymove4 && mymove5 && mymove6) {
-                        if (mymove4.innerHTML == mymove5.innerHTML && mymove5.innerHTML == mymove6.innerHTML && mymove4.innerHTML !== "") {
-                            mymove4.style.backgroundColor = "green";
-                            mymove5.style.backgroundColor = "green";
-                            mymove6.style.backgroundColor = "green";
-                            a = "c";
-                        };
-                    };
-
-                    if (mymove7 && mymove8 && mymove9) {
-                        if (mymove7.innerHTML == mymove8.innerHTML && mymove8.innerHTML == mymove9.innerHTML && mymove7.innerHTML  !== "") {
-                            mymove7.style.backgroundColor = "green";
-                            mymove8.style.backgroundColor = "green";
-                            mymove9.style.backgroundColor = "green";
-                            a = "c";
-                        };
-                    };
-
-                    if (mymove1 && mymove4 && mymove7) {
-                        if (mymove1.innerHTML == mymove4.innerHTML && mymove4.innerHTML == mymove7.innerHTML && mymove1.innerHTML !== "") {
-                            mymove1.style.backgroundColor = "green";
-                            mymove4.style.backgroundColor = "green";
-                            mymove7.style.backgroundColor = "green";
-                            a = "c";
-                        };
-                    };
-
-                    if (mymove2 && mymove5 && mymove8) {
-                        if (mymove2.innerHTML == mymove5.innerHTML && mymove5.innerHTML == mymove8.innerHTML && mymove2.innerHTML !== "") {
-                            mymove2.style.backgroundColor = "green";
-                            mymove5.style.backgroundColor = "green";
-                            mymove8.style.backgroundColor = "green";
-                            a = "c";
-                        };
-                    };
-
-                    if (mymove3 && mymove6 && mymove9) {
-                        if (mymove3.innerHTML == mymove6.innerHTML && mymove6.innerHTML == mymove9.innerHTML && mymove3.innerHTML !== "") {
-                            mymove3.style.backgroundColor = "green";
-                            mymove6.style.backgroundColor = "green";
-                            mymove9.style.backgroundColor = "green";
-                            a = "c";
-                        };
-                    };
-
-                    if (mymove1 && mymove5 && mymove9) {
-                        if (mymove1.innerHTML == mymove5.innerHTML && mymove5.innerHTML == mymove9.innerHTML && mymove1.innerHTML !== "") {
-                            mymove1.style.backgroundColor = "green";
-                            mymove5.style.backgroundColor = "green";
-                            mymove9.style.backgroundColor = "green";
-                            a = "c";
-                        };
-                    };
-
-
-                });
-            };
-
-        };
-
-
-
-
-
-
-    </script>
+<script src="script.js"></script>
 </body>
 
 </html>
